--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "build": "npm run webpack && npm run compass",
     "dev": "webpack -d --watch",
     "start": "webpack-dev-server --hot --inline",
-    "watch-dev": "npm run start & npm run webpack-watch-dev & npm run compass-watch-dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch-dev": "npm run start & npm run webpack-watch-dev & npm run compass-watch-dev"
   },
   "author": "Michel Kansou",
   "license": "ISC",
