--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-app",
-  "version": "1.0.0",
+  "name": "react-resume",
+  "version": "2.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
