--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-deep-force-update": "^2.0.1",
     "react-dom": "^0.14.7",
     "react-dropzone": "^3.3.2",
+    "react-google-analytics": "^0.2.0",
     "react-hot-loader": "^1.3.0",
     "react-mixin": "^3.0.3",
     "react-pager": "^1.1.2",
