--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: node_js
 cache:
   directories:
     - node_modules
+node_js:
+  - "7"
+  - "6"
+  - "5"
+  - "4"
 notifications:
   email: true
 script: yarn run build
