--- a/package.json
+++ b/package.json
@@ -4,53 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack -p --optimize-minimize --optimize-dedupe",
-    "webpack-dev": "webpack -d  --config ./webpack.dev.config.js",
-    "webpack-watch-dev": "webpack -w -d  --config ./webpack.dev.config.js",
-    "compass": "compass compile --force -e production -s compressed",
-    "compass-dev": "compass compile --force",
-    "compass-watch-dev": "compass watch --force",
-    "build-dev": "npm run webpack-dev && npm run compass-dev",
-    "build": "npm run webpack && npm run compass",
-    "dev": "webpack -d --watch",
-    "start": "webpack-dev-server --hot --inline",
-    "watch-dev": "npm run start & npm run webpack-watch-dev & npm run compass-watch-dev"
+    "build": "webpack -w -d --config webpack.config.js",
+    "start": "http-server -a 0.0.0.0 -p 9000"
   },
   "author": "Michel Kansou",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.6.0",
-    "babel-loader": "^6.2.4",
+    "http-server": "0.9.0",
     "jsx-loader": "^0.13.2",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "loaders.css": "^0.1.2",
+    "webpack": "^2.5.0"
   },
   "dependencies": {
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "classnames": "^2.2.3",
-    "i18n-react": "^0.1.9",
-    "i18next": "^2.2.0",
-    "i18next-browser-languagedetector": "0.0.14",
-    "i18next-node-fs-backend": "0.0.6",
-    "i18next-sprintf-postprocessor": "^0.1.0",
-    "i18next-xhr-backend": "^0.4.0",
-    "json-loader": "^0.5.4",
-    "react": "^0.14.7",
-    "react-deep-force-update": "^2.0.1",
-    "react-dom": "^0.14.7",
-    "react-dropzone": "^3.3.2",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-google-analytics": "^0.2.0",
-    "react-hot-loader": "^1.3.0",
-    "react-mixin": "^3.0.3",
-    "react-pager": "^1.1.2",
-    "react-pure-render": "^1.0.2",
-    "react-router": "^2.0.0",
-    "semantic-ui": "^2.1.8",
-    "semantic-ui-dropdown": "^2.1.7",
-    "semantic-ui-progress": "^2.1.7",
-    "semantic-ui-transition": "^2.1.7",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.17.0",
+    "webpack-dev-server": "^2.4.5",
     "yaml-loader": "^0.1.0"
   }
 }
