--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,5 @@
 {
-  "presets": [
-    ["es2015", {
-      "es2015": {
-        "loose": true,
-        "modules": false
-      }
-    }], "react"
-  ]
+    "presets":[
+        "es2017", "react", "stage-0"
+    ]
 }
