--- a/package.json
+++ b/package.json
@@ -13,31 +13,33 @@
   "author": "Michel Kansou",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^3.19.0",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.8.0",
     "eslint-config-standard-react": "^5.0.0",
-    "eslint-plugin-react": "^7.0.1",
-    "babel-eslint": "^7.2.3",
-    "eslint-watch": "^3.1.0",
-    "http-server": "0.9.0",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-watch": "^3.1.2",
+    "http-server": "0.10.0",
     "jsx-loader": "^0.13.2",
     "loaders.css": "^0.1.2",
-    "webpack": "^2.5.0"
+    "webpack": "^3.6.0"
   },
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "css-loader": "^0.28.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-google-analytics": "^0.2.0",
-    "sass-loader": "^6.0.3",
+    "babel-register": "^6.26.0",
+    "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-ga": "^2.3.5",
+    "sass-loader": "^6.0.6",
     "scroll-to-element": "^2.0.0",
-    "style-loader": "^0.17.0",
-    "webpack-dev-server": "^2.4.5",
-    "yaml-loader": "^0.1.0"
+    "style-loader": "^0.19.0",
+    "webpack-dev-server": "^2.9.1",
+    "yaml-loader": "^0.5.0"
   }
 }
