--- a/package.json
+++ b/package.json
@@ -13,34 +13,34 @@
   "author": "Michel Kansou",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "eslint": "^4.8.0",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-watch": "^3.1.2",
     "http-server": "0.10.0",
     "jsx-loader": "^0.13.2",
-    "loaders.css": "^0.1.2",
-    "webpack": "^3.6.0"
+    "loaders.css": "^0.1.2"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "css-loader": "^0.28.7",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.1",
     "firebase": "^4.5.0",
-    "html-webpack-plugin": "^2.30.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-ga": "^2.3.5",
-    "sass-loader": "^6.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-ga": "^2.5.6",
+    "sass-loader": "^7.1.0",
     "scroll-to-element": "^2.0.0",
     "style-loader": "^0.19.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "4.28.4",
+    "webpack-cli": "^3.2.1",
     "yaml-loader": "^0.5.0"
   }
 }
